Css file has been added

--- a/WebContent/WEB-INF/lib/Train.css
+++ b/WebContent/WEB-INF/lib/Train.css
@@ -1,16 +1,14 @@
-@charset "ISO-8859-1";
-<html>
-<head>
-	body{
+
+
+
+	.body{
 	 background-color: lightgreen;  
 	 float:left;
 	 Padding:auto;
 	 color:red;
 	 border-style:solid;
+	 font-family:"georgia"
 	  
 }
 
-</head>
-<body>
-</body>
-</html>
+
